--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,7 @@
 {
 	    "name": "gdhblog",
-	    "compatibility_date": "2025-08-20",
+	    "compatibility_date": "2025-08-29",
 	    "assets": {
-	      "directory": "./"
+	      "directory": "./dist"
 	    }
 	  }
